// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider :props :align 1`] = `
<div
  class="t-divider t-divider--horizontal t-divider--with-text t-divider--with-text-left"
>
  <span
    class="t-divider-inner-text"
  >
    
    TDesign
    
  </span>
</div>
`;

exports[`Divider :props :dashed 1`] = `
<div
  class="t-divider t-divider--horizontal t-divider--dashed"
>
  <!---->
</div>
`;

exports[`Divider :props :theme 1`] = `
<div
  class="t-divider t-divider--vertical"
>
  <!---->
</div>
`;

exports[`Divider <slot> default 1`] = `
<div
  class="t-divider t-divider--horizontal t-divider--with-text t-divider--with-text-center"
>
  <span
    class="t-divider-inner-text"
  >
    
    TDesign
    
  </span>
</div>
`;
